# ComfyUI-PromptTranslator

./: .gitignore  CJK_clip_encode.py  LICENSE  README.md  __init__.py  offline_translate_clip_encode.py  pyproject.toml  requirements.txt  utils.py
nodes/: CJK_clip_encode.py  offline_prompt_translate.py  offline_translate_clip_encode.py
